fix: z-index of gradient to not cover nav

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -22,6 +22,7 @@
   right: -5%;
   transform: scale(1.5);
   transition: ease-in 0.5s;
+  z-index: 0;
 }
 
 .gradBtm {
@@ -30,6 +31,8 @@
   left: -12%;
   transform: scale(1.5) rotate(-150deg);
   transition: ease-in 0.5s;
+
+  z-index: 0;
 }
 
 @media screen and (max-width: 768px) {
