--- a/components/Layout/Navbar.module.css
+++ b/components/Layout/Navbar.module.css
@@ -7,6 +7,8 @@
   justify-content: space-between;
   align-items: center;
 
+  z-index: 10;
+
   /* padding-top: 2em; */
   /* padding-bottom: 2em; */
 }
